welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  var hauteur = getMondeHauteur()
  var T=new Array[Color](hauteur)
  for ( i<-0 to hauteur-1 ){
    T(i)=getCouleurSol()
    avance()
  }
  for (i<-0 to hauteur-1){
    leveBrosse()
    gauche()
    avance()
    droite()
    baisseBrosse()
    for ( i<-0 to T.lenght-1 ){
      setCouleurBrosse(T(i))
      avance()
    }
  }
}